# api/RoutineTransactionPolicy.go
@@ -5,20 +5,35 @@ import (
 	"net/http"
 	"time"
 
+	prospercontext "git.digitus.me/library/prosper-kit/context"
+	"git.digitus.me/pfe/smart-wallet/types"
+	"git.digitus.me/prosperus/protocol/identity"
+	ptclTypes "git.digitus.me/prosperus/protocol/types"
 	"github.com/gin-gonic/gin"
+	"go.uber.org/zap"
 )
 
 type RTPRequest struct {
-	Name              string `json:"name" binding:"required"`
-	Description       string `json:"description" binding:"required"`
-	NymID             string `json:"nym_id" binding:"required"`
-	ScheduleStartDate string `json:"schedule_start_date" binding:"required"`
-	ScheduleEndDate   string `json:"schedule_end_date" binding:"required"`
-	Frequency         string `json:"frequency" binding:"required,oneof= DAILY MONTHLY WEEKLY"`
-	Amount            int32  `json:"amount" binding:"required"`
+	Name              string             `json:"name" binding:"required"`
+	Description       string             `json:"description" binding:"required"`
+	NymID             identity.PublicKey `json:"nym_id" binding:"required"`
+	Recipient         identity.PublicKey `json:"recipient" binding:"required"`
+	ScheduleStartDate string             `json:"schedule_start_date" binding:"required"`
+	ScheduleEndDate   string             `json:"schedule_end_date" binding:"required"`
+	Frequency         string             `json:"frequency" binding:"required,oneof= DAILY MONTHLY WEEKLY"`
+	Amount            ptclTypes.Balance  `json:"amount" binding:"required"`
 }
 
+// @ID create-routine-transaction-policy
+// @Tags routine-transaction-policy
+// @Description Create a routine transaction policy
+// @Param nym-id path string true "NymID"
+// @Param RTPRequest body RTPRequest true "Routine Transation Policy"
+// @Success 201
+// @Router /api/:nym-id/routine-transaction-policy [POST]
 func (s *Server) createRoutineTransactionPolicy(c *gin.Context) {
+	logger := prospercontext.GetLogger(c)
+
 	var req RTPRequest
 	if err := c.ShouldBindJSON(&req); err != nil {
 		c.JSON(http.StatusBadRequest, errorResponse(err))
@@ -33,12 +48,42 @@ func (s *Server) createRoutineTransactionPolicy(c *gin.Context) {
 	}
 
 	// TODO: insert
+	err := s.service.CreateRoutineTransactionPolicy(prospercontext.JoinContexts(c), types.RoutineTransactionPolicy{
+		Name:              req.Name,
+		Description:       req.Description,
+		ScheduleStartDate: scheduleStartDate,
+		ScheduleEndDate:   scheduleEndDate,
+		Amount:            req.Amount,
+		Frequency:         req.Frequency,
+		NymID:             req.NymID,
+		Recipient:         req.Recipient,
+	})
+	switch {
+	case s.service.IsUserError(err):
+		logger.Debug("invalid routine transaction policy", zap.Error(err))
+		c.JSON(http.StatusBadRequest, gin.H{"message": "invalid routine transaction policy"})
+		return
+	case err != nil:
+		logger.Error("could not create routine transaction policy", zap.Error(err))
+		c.JSON(http.StatusInternalServerError, errorResponse(err))
+		return
+	default:
+		c.Status(http.StatusCreated)
+		return
+	}
 }
 
 type RTPRequestUri struct {
 	ID int64 `uri:"id" binding:"required,min=1"`
 }
 
+// @ID delete-routine-transaction-policy
+// @Tags routine-transaction-policy
+// @Description Delete a routine transaction policy
+// @Param nym-id path string true "NymID"
+// @Param id path int true "ID"
+// @Success 204
+// @Router /api/:nym-id/routine-transaction-policy/:id [DELETE]
 func (s *Server) deleteRoutineTransactionPolicy(c *gin.Context) {
 	var reqUri RTPRequestUri
 	if err := c.BindUri(&reqUri); err != nil {
@@ -49,7 +94,17 @@ func (s *Server) deleteRoutineTransactionPolicy(c *gin.Context) {
 	// TODO: delete
 }
 
+// @ID update-routine-transaction-policy
+// @Tags routine-transaction-policy
+// @Description Update a routine transaction policy
+// @Param nym-id path string true "NymID"
+// @Param id path int true "ID"
+// @Param RTPRequest body RTPRequest true "Routine Transation Policy"
+// @Success 200
+// @Router /api/:nym-id/routine-transaction-policy/:id [PUT]
 func (s *Server) updateRoutineTransactionPolicy(c *gin.Context) {
+
+	logger := prospercontext.GetLogger(c)
 	var req RTPRequest
 	var reqUri RTPRequestUri
 	if err := c.BindUri(&reqUri); err != nil {
@@ -68,9 +123,40 @@ func (s *Server) updateRoutineTransactionPolicy(c *gin.Context) {
 		return
 	}
 
-	// TODO: update
+	err := s.service.UpdateRoutineTransactionPolicy(prospercontext.JoinContexts(c), types.RoutineTransactionPolicy{
+		ID:                int(reqUri.ID),
+		Name:              req.Name,
+		Description:       req.Description,
+		Recipient:         req.Recipient,
+		NymID:             req.NymID,
+		ScheduleStartDate: scheduleStartDate,
+		ScheduleEndDate:   scheduleEndDate,
+		Frequency:         req.Frequency,
+		Amount:            req.Amount,
+	})
+	switch {
+	case s.service.IsUserError(err):
+		logger.Debug("invalid routine transaction policy", zap.Error(err))
+		c.JSON(http.StatusBadRequest, gin.H{"message": "invalid routine transaction policy"})
+		return
+	case err != nil:
+		logger.Error("could not update routine transaction policy", zap.Error(err))
+		c.JSON(http.StatusInternalServerError, errorResponse(err))
+		return
+	default:
+		c.Status(http.StatusOK)
+		return
+	}
+
 }
 
+// @ID get-routine-transaction-policy
+// @Tags routine-transaction-policy
+// @Description Get a routine transaction policy
+// @Param nym-id path string true "NymID"
+// @Param id path int true "ID"
+// @Success 200 {object} types.RoutineTransactionPolicy
+// @Router /api/:nym-id/routine-transaction-policy/:id [GET]
 func (s *Server) getRoutineTransactionPolicyById(c *gin.Context) {
 	var reqUri RTPRequestUri
 
@@ -79,7 +165,16 @@ func (s *Server) getRoutineTransactionPolicyById(c *gin.Context) {
 		return
 	}
 
-	// TODO: Get
+	rtp, err := s.service.GetRoutineTransactionPolicy(prospercontext.JoinContexts(c), int(reqUri.ID))
+	if err != nil {
+		if s.service.IsNotFoundError(err) {
+			c.Status(http.StatusNotFound)
+			return
+		}
+		c.JSON(http.StatusInternalServerError, errorResponse(err))
+		return
+	}
+	c.JSON(http.StatusOK, rtp)
 }
 
 type RTPNymUri struct {
@@ -87,10 +182,22 @@ type RTPNymUri struct {
 }
 
 type listRoutineTransactionPolicies struct {
-	PageId   int32 `form:"page_id" binding:"required,min=1"`
-	PageSize int32 `form:"page_size" binding:"required,min=5,max=10"`
+	Page         int `form:"page" binding:"required,min=1"`
+	ItemsPerPage int `form:"itemsPerPage" binding:"required,min=5,max=10"`
 }
 
+type listRoutineTransactionPoliciesResponse struct {
+	Data  []types.RoutineTransactionPolicy `json:"data"`
+	Total int                              `json:"total"`
+}
+
+// @ID list-routine-transaction-policy
+// @Tags routine-transaction-policy
+// @Description Get all transaction trigger policies
+// @Param nym-id path string true "NymID"
+// @Param _ query listRoutineTransactionPoliciesResponse false "comment"
+// @Success 200 {object} listRoutineTransactionPoliciesResponse
+// @Router /api/:nym-id/routine-transaction-policy [GET]
 func (s *Server) listRoutineTransactionPolicies(c *gin.Context) {
 	var reqUri RTPNymUri
 	var reqForm listRoutineTransactionPolicies
@@ -102,6 +209,21 @@ func (s *Server) listRoutineTransactionPolicies(c *gin.Context) {
 		c.JSON(http.StatusBadRequest, errorResponse(err))
 		return
 	}
-
-	// TODO: List
+	nym, err := identity.PublicKeyFromString(reqUri.NymID)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, errorResponse(err))
+		return
+	}
+	rtps, total, err := s.service.ListRoutineTransactionPolicies(
+		prospercontext.JoinContexts(c), *nym, reqForm.Page, reqForm.ItemsPerPage,
+	)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, errorResponse(err))
+		return
+	}
+	c.JSON(http.StatusOK, listRoutineTransactionPoliciesResponse{
+		Data: rtps,
+		// TODO: return total
+		Total: total,
+	})
 }
