# docs/swagger.json
@@ -7,6 +7,165 @@
         "version": "0.0.0"
     },
     "paths": {
+        "/api/:nym-id/routine-transaction-policy": {
+            "get": {
+                "description": "Get all transaction trigger policies",
+                "tags": [
+                    "routine-transaction-policy"
+                ],
+                "operationId": "list-routine-transaction-policy",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "NymID",
+                        "name": "nym-id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "name": "total",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.listRoutineTransactionPoliciesResponse"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Create a routine transaction policy",
+                "tags": [
+                    "routine-transaction-policy"
+                ],
+                "operationId": "create-routine-transaction-policy",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "NymID",
+                        "name": "nym-id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Routine Transation Policy",
+                        "name": "RTPRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.RTPRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": ""
+                    }
+                }
+            }
+        },
+        "/api/:nym-id/routine-transaction-policy/:id": {
+            "get": {
+                "description": "Get a routine transaction policy",
+                "tags": [
+                    "routine-transaction-policy"
+                ],
+                "operationId": "get-routine-transaction-policy",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "NymID",
+                        "name": "nym-id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/types.RoutineTransactionPolicy"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "Update a routine transaction policy",
+                "tags": [
+                    "routine-transaction-policy"
+                ],
+                "operationId": "update-routine-transaction-policy",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "NymID",
+                        "name": "nym-id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Routine Transation Policy",
+                        "name": "RTPRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.RTPRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": ""
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete a routine transaction policy",
+                "tags": [
+                    "routine-transaction-policy"
+                ],
+                "operationId": "delete-routine-transaction-policy",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "NymID",
+                        "name": "nym-id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": ""
+                    }
+                }
+            }
+        },
         "/api/:nym-id/transaction-trigger-policy": {
             "get": {
                 "description": "Get all transaction trigger policies",
@@ -23,12 +182,15 @@
                         "required": true
                     },
                     {
+                        "maximum": 10,
+                        "minimum": 5,
                         "type": "integer",
                         "name": "itemsPerPage",
                         "in": "query",
                         "required": true
                     },
                     {
+                        "minimum": 1,
                         "type": "integer",
                         "name": "page",
                         "in": "query",
@@ -175,6 +337,56 @@
         }
     },
     "definitions": {
+        "api.RTPRequest": {
+            "type": "object",
+            "required": [
+                "amount",
+                "description",
+                "frequency",
+                "name",
+                "nym_id",
+                "recipient",
+                "schedule_end_date",
+                "schedule_start_date"
+            ],
+            "properties": {
+                "amount": {
+                    "$ref": "#/definitions/types.Balance"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "frequency": {
+                    "type": "string",
+                    "enum": [
+                        "DAILY",
+                        "MONTHLY",
+                        "WEEKLY"
+                    ]
+                },
+                "name": {
+                    "type": "string"
+                },
+                "nym_id": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
+                "recipient": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
+                "schedule_end_date": {
+                    "type": "string"
+                },
+                "schedule_start_date": {
+                    "type": "string"
+                }
+            }
+        },
         "api.TTPRequest": {
             "type": "object",
             "required": [
@@ -205,6 +417,20 @@
                 }
             }
         },
+        "api.listRoutineTransactionPoliciesResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/types.RoutineTransactionPolicy"
+                    }
+                },
+                "total": {
+                    "type": "integer"
+                }
+            }
+        },
         "api.listTransactionTriggerPoliciesResponse": {
             "type": "object",
             "properties": {
@@ -221,7 +447,47 @@
         },
         "types.Balance": {
             "type": "object",
-            "additionalProperties": {"type": "string", "enum": ["Contributor", "User"]}
+            "additionalProperties": {
+                "type": "integer"
+            }
+        },
+        "types.RoutineTransactionPolicy": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "$ref": "#/definitions/types.Balance"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "frequency": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "nymID": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
+                "recipient": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
+                "scheduleEndDate": {
+                    "type": "string"
+                },
+                "scheduleStartDate": {
+                    "type": "string"
+                }
+            }
         },
         "types.TransactionTriggerPolicy": {
             "type": "object",
