# types/routine-transaction-policy.go
@@ -4,6 +4,7 @@ import (
 	"time"
 
 	"git.digitus.me/prosperus/protocol/identity"
+	ptclTypes "git.digitus.me/prosperus/protocol/types"
 )
 
 type RoutineTransactionPolicy struct {
@@ -11,8 +12,9 @@ type RoutineTransactionPolicy struct {
 	Name              string
 	Description       string
 	NymID             identity.PublicKey
+	Recipient         identity.PublicKey
 	ScheduleStartDate time.Time
 	ScheduleEndDate   time.Time
 	Frequency         string
-	Amount            int64
+	Amount            ptclTypes.Balance
 }
